--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
+    "markdown-to-jsx": "^7.1.7",
     "nanoid": "^3.3.1",
     "next": "12.1.0",
     "react": "17.0.2",
