--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "graphql-request": "^4.1.0",
     "markdown-to-jsx": "^7.1.7",
     "nanoid": "^3.3.1",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.49.9",
     "styled-components": "^5.3.3"
   },
